--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "web"]
 	path = web
 	url = git@github.com:ferdiunal/panel.web.git
+[submodule "docs"]
+	path = docs
+	url = git@github.com:ferdiunal/panel.go.wiki.git
