--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [main, master]
   pull_request:
+  workflow_dispatch:
+
+concurrency:
+  group: ci-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
@@ -18,10 +23,10 @@ jobs:
           go-version: '1.25.x'
 
       - name: Run tests
-        run: go test ./...
+        run: go test -count=1 ./...
 
       - name: Run race tests
-        run: go test -race ./...
+        run: go test -race -count=1 ./...
 
       - name: Run go vet
         run: go vet ./...
