feat: enhance resource generation and model handling
- Updated `makeResource` function to automatically create model files in `internal/entity` directory.
- Added logic to append to existing model files or create new ones based on the presence of the file.
- Introduced `appendFileFromStub` function to handle appending data to existing files.
- Enhanced user feedback during resource generation with detailed output for model and resource paths.
- Updated import handling in `main.go` to support dynamic resource imports.
- Added new `model_struct.stub` for generating model structures.
- Improved documentation for resource and model generation processes.

--- a/cmd/panel/stubs/i18n-pages-example-en.yaml
+++ b/cmd/panel/stubs/i18n-pages-example-en.yaml
@@ -69,3 +69,50 @@ messages.error: "An error occurred"
 messages.loading: "Loading..."
 messages.no_data: "No data found"
 messages.confirm_delete: "Are you sure you want to delete?"
+
+# AUTH - Authentication
+auth.login.title: "Sign In"
+auth.login.description: "Enter your credentials to access your account"
+auth.login.email: "Email"
+auth.login.emailPlaceholder: "m@example.com"
+auth.login.password: "Password"
+auth.login.passwordPlaceholder: "••••••••"
+auth.login.forgotPassword: "Forgot Password"
+auth.login.submit: "Sign In"
+auth.login.submitting: "Signing in..."
+auth.login.noAccount: "Don't have an account?"
+auth.login.register: "Register"
+auth.login.fillAllFields: "Please fill all fields"
+auth.login.loginFailed: "Login failed"
+
+auth.register.title: "Register"
+auth.register.description: "Create a new account"
+auth.register.name: "Full Name"
+auth.register.namePlaceholder: "Your Full Name"
+auth.register.email: "Email"
+auth.register.emailPlaceholder: "m@example.com"
+auth.register.password: "Password"
+auth.register.submit: "Register"
+auth.register.hasAccount: "Already have an account?"
+auth.register.login: "Sign In"
+auth.register.success: "Registration successful! Please sign in."
+auth.register.failed: "Registration failed"
+auth.register.nameMinLength: "Name must be at least 2 characters"
+auth.register.emailInvalid: "Invalid email address"
+auth.register.passwordMinLength: "Password must be at least 6 characters"
+
+auth.forgotPassword.title: "Forgot Password"
+auth.forgotPassword.description: "Enter your email address to reset your password"
+auth.forgotPassword.email: "Email"
+auth.forgotPassword.emailPlaceholder: "m@example.com"
+auth.forgotPassword.submit: "Send Reset Link"
+auth.forgotPassword.backToLogin: "Back to Login"
+auth.forgotPassword.success: "Password reset link sent"
+auth.forgotPassword.failed: "Operation failed"
+auth.forgotPassword.emailInvalid: "Invalid email address"
+
+auth.unauthorized.title: "Access Denied"
+auth.unauthorized.description: "You are not authorized to access this resource"
+auth.unauthorized.message: "Your account does not have the required permissions to view this page. If you believe this is an error, please contact the administrator."
+auth.unauthorized.goBack: "Go Back"
+auth.unauthorized.goHome: "Go Home"
