--- a/cmd/panel/stubs/i18n-pages-example.yaml
+++ b/cmd/panel/stubs/i18n-pages-example.yaml
@@ -69,3 +69,50 @@ messages.error: "Bir hata oluştu"
 messages.loading: "Yükleniyor..."
 messages.no_data: "Veri bulunamadı"
 messages.confirm_delete: "Silmek istediğinizden emin misiniz?"
+
+# AUTH - Kimlik Doğrulama
+auth.login.title: "Giriş Yap"
+auth.login.description: "Hesabınıza erişmek için bilgilerinizi girin"
+auth.login.email: "E-posta"
+auth.login.emailPlaceholder: "m@ornek.com"
+auth.login.password: "Şifre"
+auth.login.passwordPlaceholder: "••••••••"
+auth.login.forgotPassword: "Şifremi Unuttum"
+auth.login.submit: "Giriş Yap"
+auth.login.submitting: "Giriş Yapılıyor..."
+auth.login.noAccount: "Hesabınız yok mu?"
+auth.login.register: "Kayıt Ol"
+auth.login.fillAllFields: "Lütfen tüm alanları doldurun"
+auth.login.loginFailed: "Giriş başarısız"
+
+auth.register.title: "Kayıt Ol"
+auth.register.description: "Yeni bir hesap oluşturun"
+auth.register.name: "Ad Soyad"
+auth.register.namePlaceholder: "Adınız Soyadınız"
+auth.register.email: "E-posta"
+auth.register.emailPlaceholder: "m@ornek.com"
+auth.register.password: "Şifre"
+auth.register.submit: "Kayıt Ol"
+auth.register.hasAccount: "Zaten hesabınız var mı?"
+auth.register.login: "Giriş Yap"
+auth.register.success: "Kayıt başarılı! Lütfen giriş yapın."
+auth.register.failed: "Kayıt başarısız"
+auth.register.nameMinLength: "Ad en az 2 karakter olmalıdır"
+auth.register.emailInvalid: "Geçersiz e-posta adresi"
+auth.register.passwordMinLength: "Şifre en az 6 karakter olmalıdır"
+
+auth.forgotPassword.title: "Şifremi Unuttum"
+auth.forgotPassword.description: "Şifrenizi sıfırlamak için e-posta adresinizi girin"
+auth.forgotPassword.email: "E-posta"
+auth.forgotPassword.emailPlaceholder: "m@ornek.com"
+auth.forgotPassword.submit: "Sıfırlama Bağlantısı Gönder"
+auth.forgotPassword.backToLogin: "Giriş ekranına dön"
+auth.forgotPassword.success: "Şifre sıfırlama bağlantısı gönderildi"
+auth.forgotPassword.failed: "İşlem başarısız"
+auth.forgotPassword.emailInvalid: "Geçersiz e-posta adresi"
+
+auth.unauthorized.title: "Erişim Reddedildi"
+auth.unauthorized.description: "Bu kaynağa erişim yetkiniz yok"
+auth.unauthorized.message: "Hesabınızın bu sayfayı görüntülemek için gerekli izinleri yok. Bir hata olduğunu düşünüyorsanız lütfen yönetici ile iletişime geçin."
+auth.unauthorized.goBack: "Geri Dön"
+auth.unauthorized.goHome: "Ana Sayfaya Dön"
